--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ tensorflow = "2.2.0"
 numpy = "^1.19.2"
 scipy = "1.4.1"
 PyQt5 = "^5.15.1"
+pydot = "^1.4.1"
+graphviz = "^0.14.1"
 
 [tool.poetry.dev-dependencies]
 
